--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-REACT_APP_CONFLUX_NODE_RPC=http://mainnet-jsonrpc.conflux-chain.org:12537
-REACT_APP_CONFLUX_COIN_ADDRESS=0x86dc863969187b9213c35a794b7dab0b3c188c94
+REACT_APP_CONFLUX_NODE_RPC=https://test.confluxrpc.com
+REACT_APP_CONFLUX_NODE_NETWORKID=1
+REACT_APP_CONFLUX_COIN_ADDRESS=cfxtest:acgpsphbmrmvdnztdscj6crub0g4rrhndyccm51a5w
